--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,11 @@ body {
 .App {
   display: grid;
   grid-template-columns: 20% 80%;
-  padding: 2% 10%;
+  padding: 2% 8%;
 }
 
 @media (max-width: 1100px) {
   .App {
-    grid-template-columns: 30% 70%;
     padding: 2%;
   }
 }
@@ -26,6 +25,6 @@ body {
     padding: 2% 3%;
   }
   .second-section-mobile {
-    grid-template-columns: 1fr;
+    display: none;
   }
 }
