--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* 
 body {
-  /* background-color: #010024; */
-}
+  background-color: #010024;
+} */
 
 .App {
   display: grid;
