--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -15,6 +16,8 @@ body {
 
 #root {
   overflow-x: hidden;
+  flex: 1 0 auto;
+  /* margin-bottom: -50px; */
 }
 
 code {
